test_case/rust-lang_rust/34907_234607971_1.rs

-    //~^^^ ERROR mismatched types in range
-    //~| NOTE expected char, found integral variable
+    //~^^^ ERROR mismatched types
+    //~| NOTE expected type `_`
+    //~| NOTE found type `char`
